--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "three": "^0.169.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.14.0",
     "eslint-config-next": "16.0.1",
