--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
-    }
-  }
+    },
+    "jsx": "preserve",
+    "moduleResolution": "node",
+    "target": "esnext"
+  },
+  "exclude": ["node_modules"]
 }
