--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=20.11.0"
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.34.5",
     "@react-three/drei": "^10.7.6",
